Added a project using Spark

--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
 						</div>
 					</section>
 					<section class="spotlight">
+						<div class="image"><img src="images/sentiment.jpg" alt="" /></div>
+						<div class="content">
+							<h2><a href="https://github.com/jacek257/DSCI551_Project">Sentiment Analysis Data Storage</a></h2>
+							<p>Storing and querying sentiment analysis data through MongoDB, Spark, and MySQL.</p>
+						</div>
+					</section>
+					<section class="spotlight">
 						<div class="image"><img src="images/dungeon_m.png" alt="" /></div>
 						<div class="content">
 							<h2><a href="https://dannym08.github.io/Dungeon-Masters/">Dungeon Masters</a></h2>
